# CompileDemo

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cc
base/: base.h
files1/: CMakeLists.txt  max_score.cc
files2/: CMakeLists.txt  mean.cc
includes1/: max_score.h
includes2/: mean.h
